--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -172,7 +172,7 @@
                     <hr id="contactFormQuoteSeparator" class="my-2 border-gray-300" style="display: none;">
                     <p class="text-right font-bold mt-2 text-orange-600 text-2xl">Estimated Total: <span id="contactFormQuoteTotal"></span></p>
                     <div class="mt-4 text-center">
-                        <a id="mailInFormButton" href="https://www.jwselectronicsrepair.com/mail-in-form" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2 px-6 rounded-lg shadow-sm transition duration-150 ease-in-out text-base"> {/* Removed target="_blank" */}
+                        <a id="mailInFormButton" href="https://www.jwselectronicsrepair.com/mail-in-form" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2 px-6 rounded-lg shadow-sm transition duration-150 ease-in-out text-base">
                             Mail-In Repair Form
                         </a>
                     </div>
