--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -144,7 +144,7 @@
         </div>
 
         <div id="repairsArea" class="mb-6 min-h-[200px] max-h-[50vh] overflow-y-auto p-1">
-            <p id="repairsPlaceholder" class="text-gray-500 text-center py-4">Please complete selections to see repair options. You may choose multiple repairs of the same service category.</p>
+            <p id="repairsPlaceholder" class="text-gray-500 text-center py-4">Please complete selections to see quote. You may choose multiple repairs of the same service category.</p>
         </div>
 
         <div class="mt-8 text-center">
@@ -183,10 +183,10 @@
                             Prepare Mail-In Form
                         </button>
                     </div>
-                    <p class="text-xs text-center mt-4 text-gray-500">Please mention this quote when contacting us. Prices are subject to change at any time and are not always 100% accurate.</p>
+                    <p class="text-xs text-center mt-4 text-gray-500">Please mention this quote when contacting us. Prices may change at any time and all repair are subject to NY state sales tax.</p>
                 </div>
             </div>
-            <p class="text-center text-gray-700 mt-6">Please call, text, email, or visit us with your quote details to proceed with your repair.</p>
+            <p class="text-center text-gray-700 mt-6">Please Call, Text, E-Mail, Visit us or Mail in device to proceed with your repair.</p>
         </div>
 
         <div id="integratedMailInSection" class="mt-10 pt-8 border-t-2 border-orange-500 hidden-integrated print-this-section" style="display: none;">
