--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -3161,7 +3161,7 @@
                 ]
             },
         ];
-        // --- END OF SERVICE DATA ---
+       // --- END OF SERVICE DATA ---
 
         const categoryIconContainer = document.getElementById('categoryIconContainer');
         const brandSelect = document.getElementById('brandSelect');
@@ -3577,6 +3577,10 @@
             }
         });
     </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
