--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -281,7 +281,10 @@
                     <hr id="contactFormQuoteSeparator" class="my-2 border-gray-300" style="display: none;">
                     <p class="text-right font-bold mt-2 text-orange-600 text-2xl">Estimated Total: <span id="contactFormQuoteTotal"></span></p>
                     <div class="mt-6 text-center">
-                        <button id="prepareMailInButton" class="bg-amber-500 hover:bg-amber-600 text-white font-semibold py-2.5 px-6 rounded-lg shadow-md transition duration-150 ease-in-out text-base mb-3">
+                         <a href="https://jwselectronicsrepair.com/booking" target="_blank" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2.5 px-6 rounded-lg shadow-md transition duration-150 ease-in-out text-base mb-3">
+                            Book Appointment
+                        </a>
+			<button id="prepareMailInButton" class="bg-amber-500 hover:bg-amber-600 text-white font-semibold py-2.5 px-6 rounded-lg shadow-md transition duration-150 ease-in-out text-base mb-3">
                             Prepare Mail-In Form
                         </button>
                         <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChsSEwiD5_XwvMGNAxWMSkcBHRKQHPQYACICCAEQARoCcXU&co=1&gclid=Cj0KCQjwotDBBhCQARIsAG5pinP9WJ2KxTdmFVngWUinBmk1EcUdMHwp-exZiGZAYS99iv0PRokd0o4aAvVrEALw_wcB&ei=Dow0aOr4LYGs5NoPhbTA8AQ&ohost=www.google.com&cid=CAESeOD2aY8PFBJXhxDqUyG9Rghhuz-QlMS94Zo6Bua285Ib1EnYgTWGfEA7qQMVQnai9s1t6-otU7WkbHiBVef0lP2G02_p-Q8OBM6DXuzHV-5T429-EpJe0q2miNUuhGyLDvkvI5i0P-tYHdAZITPuJcA68kwKHhMkEw&category=acrcp_v1_0&sig=AOD64_0dxFpOtSnEciXPS4oRmRkrNUNJoA&q&sqi=2&adurl&ved=2ahUKEwjqt_DwvMGNAxUBFlkFHQUaEE4Q0Qx6BAgKEAE" target="_blank" class="inline-block bg-orange-600 hover:bg-orange-700 text-white font-semibold py-2.5 px-6 rounded-lg shadow-md transition duration-150 ease-in-out text-base">
